# cosmic-corridor

./: README.md  pyproject.toml  ruff.toml  server.py
src/cosmic_corridor/: __main__.py  game.py  web.py
tests/: test_basic.py  test_web.py
